--- a/index.html
+++ b/index.html
@@ -1,15 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles/prefStyle.css">
+    <title>Preferências</title>
 </head>
+
 <body>
-    <div>
-        
+    <div class="container">
+        <h1>Editar Preferências da Conta</h1>
+        <form>
+            <div class="form-group">
+                <label>Tipo de animal:</label>
+                <div class="radio-group">
+                    <label for="tipo-gato">
+                        <input type="radio" id="tipo-gato" name="tipo-animal" value="gato" onclick="renderRaca()"> Gato
+                    </label>
+                    <label for="tipo-cachorro">
+                        <input type="radio" id="tipo-cachorro" name="tipo-animal" value="cachorro" onclick="renderRaca()"> Cachorro
+                    </label>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label>Porte do animal:</label>
+                <select name="porte-animal">
+                    <option value=3>Grande</option>
+                    <option value=2>Médio</option>
+                    <option value=1>Pequeno</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label>Raça do animal:</label>
+                <select name="raca" id="racaSelect"></select>
+            </div>
+
+            <div class="form-group">
+                <label>Idade do animal (Em anos humanos):</label>
+                <input type="text" name="idade-animal">
+            </div>
+
+            <button class="btn-save" type="submit" onclick="postPref()" >Salvar Preferências</button>
+        </form>
     </div>
+    <script src="./src/index.js"></script>
 </body>
 </html>
