--- a/telas/cadastro.html
+++ b/telas/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/cadastroStyle.css">
+    <link rel="stylesheet" href="../styles/cadastroStyle.css">
     <script src="https://kit.fontawesome.com/26ad43877c.js" crossorigin="anonymous"></script>
     <title>Cadastro</title>
 </head>
@@ -37,6 +37,6 @@
             <button type="submit" onclick="postCadastro()"> Cadastrar</button>
         </div>
     </div>
-    <script src="./render/scriptCadastro.js"></script>
+    <script src="../render/scriptCadastro.js"></script>
 </body>
 </html>
