--- a/telas/lista.html
+++ b/telas/lista.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/recomendadoStyles.css">
+    <link rel="stylesheet" href="../styles/listaStyle.css">
     <title>Document</title>
 </head>
+
 <body>
-    <script src="/render/lista.js"></script>
+    <div class="container">
+        <div class="content">
+            <div class="card">
+                <div class="topCard">
+                </div>
+                <div class="mediaCard">
+                </div>
+                <div class="bottomCard">
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="../render/lista.js"></script>
 </body>
 </html>
