--- a/telas/pref.html
+++ b/telas/pref.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/prefStyle.css">
+    <link rel="stylesheet" href="../styles/prefStyle.css">
     <title>Preferências</title>
 </head>
 
@@ -49,6 +49,6 @@
             <button class="btn-save" type="submit" onclick="postPref()" >Salvar Preferências</button>
         </form>
     </div>
-    <script src="./src/index.js"></script>
+    <script src="../src/index.js"></script>
 </body>
 </html>
