--- a/telas/cadastro.html
+++ b/telas/cadastro.html
@@ -1,42 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/cadastroStyle.css">
     <script src="https://kit.fontawesome.com/26ad43877c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../styles/sidebar.css">
     <title>Cadastro</title>
 </head>
+
 <body>
-    <div id="form">
-        <form action="">
-            <h2 class="title">Cadastro do Adotante</h2>
-        </form>
-        <label for="username">Nome</label>
-        <div class="input">
-            <i class="fa-solid fa-user"></i>
-            <input id="username" name="username" placeholder="Username" type="text" required>
-        </div>
-        <label for="email">E-mail</label>
-        <div class="input">
-            <i class="fa-solid fa-envelope"></i>
-            <input id="email" name="email" placeholder="Email" type="text" required>
-        </div>
-        <label for="senha">Senha</label>
-        <div class="input">
-            <i class="fa-solid fa-lock"></i>
-            <input id="senha" name="senha" placeholder="Password" type="password" required> 
-        </div>
-        <label for="cpf">CPF</label>
-        <div class="input">
-            <i class="fa-solid fa-image-portrait"></i>
-            <input id="cpf" name="cpf" placeholder="xxx.xxx.xxx.xx" type="text" required>
-        </div>
-        <div id="btn">
-            <button type="submit" onclick="postCadastro()"> Cadastrar</button>
-        </div>
+    <div class="sidebar">
+        <button class="sidebar-toggle">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </button>
+        <ul class="menu">
+            <li><a href="./pref.html">Preferências</a></li>
+            <li><a href="./index.html">Página principal</a></li>
+            <li><a href="./recomendados.html">Recomendados</a></li>
+            <li><a href="./lista.html">Todos os animais</a></li>
+        </ul>
     </div>
+    <div id="form">
+        <form id="formulario">
+            <h2 class="title">Cadastro do Adotante</h2>
+
+            <label for="username">Nome</label>
+            <div class="input">
+                <i class="fa-solid fa-user"></i>
+                <input id="username" name="username" placeholder="Nome" type="text" required>
+            </div>
+
+            <label for="email">E-mail</label>
+            <div class="input">
+                <i class="fa-solid fa-envelope"></i>
+                <input id="email" name="email" placeholder="Email" type="email" required>
+            </div>
+
+            <label for="senha">Senha</label>
+            <div class="input">
+                <i class="fa-solid fa-lock"></i>
+                <input id="senha" name="senha" placeholder="Senha" type="password" required>
+            </div>
+
+            <label for="cpf">CPF</label>
+            <div class="input">
+                <i class="fa-solid fa-image-portrait"></i>
+                <input id="cpf" name="cpf" placeholder="CPF" type="text" required>
+            </div>
+
+            <div id="btn">
+                <button id="botao" type="submit" onclick="postCadastro()">Cadastrar</button>
+            </div>
+        </form>
+    </div>
+    <script src="./togglesidebar.js"></script>
     <script src="../render/scriptCadastro.js"></script>
 </body>
+
 </html>
