--- a/telas/lista.html
+++ b/telas/lista.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/listaStyle.css">
+    <link rel="stylesheet" href="../styles/sidebar.css">
     <title>Animais</title>
 </head>
 
@@ -17,34 +18,29 @@
         </button>
         <ul class="menu">
             <li><a href="./pref.html">Preferências</a></li>
-            <li><a href="#">Página principal</a></li>
+            <li><a href="./index.html">Página principal</a></li>
             <li><a href="./recomendados.html">Recomendados</a></li>
         </ul>
     </div>
 
     <div class="container">
-
         <div class="content">
             <div class="card">
-                <div class="topCard"></div>
-                <div class="mediaCard"></div>
-                <div class="bottomCard"></div>
+                <div class="topCard">
+                    <h2 class="title">Título do Card</h2>
+                    <p class="secondText">Subtítulo do Card</p>
+                </div>
+                <div class="mediaCard">
+                    <img src="caminho-da-imagem" alt="Descrição da imagem">
+                </div>
+                <div class="bottomCard">
+                    <p class="bottomText">Texto do Card</p>
+                </div>
             </div>
-
         </div>
     </div>
     <script src="../render/lista.js"></script>
-    <script>
-        const sidebarToggle = document.querySelector('.sidebar-toggle');
-        const sidebar = document.querySelector('.sidebar');
-        const content = document.querySelector('.content');
-
-        sidebarToggle.addEventListener('click', () => {
-            sidebar.classList.toggle('show-sidebar');
-            content.classList.toggle('show-sidebar');
-        });
-
-    </script>
+    <script src="./togglesidebar.js"></script>
 </body>
 
 </html>
