--- a/telas/pref.html
+++ b/telas/pref.html
@@ -8,10 +8,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/prefStyle.css">
+    <link rel="stylesheet" href="../styles/sidebar.css">
     <title>Preferências</title>
 </head>
 
 <body>
+    <div class="sidebar">
+        <button class="sidebar-toggle">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </button>
+        <ul class="menu">
+            <li><a href="./pref.html">Cadastro</a></li>
+            <li><a href="./index.html">Página principal</a></li>
+            <li><a href="./recomendados.html">Recomendados</a></li>
+        </ul>
+    </div>
     <div class="container">
         <h1>Editar Preferências da Conta</h1>
         <form>
@@ -22,7 +35,8 @@
                         <input type="radio" id="tipo-gato" name="tipo-animal" value="gato" onclick="renderRaca()"> Gato
                     </label>
                     <label for="tipo-cachorro">
-                        <input type="radio" id="tipo-cachorro" name="tipo-animal" value="cachorro" onclick="renderRaca()"> Cachorro
+                        <input type="radio" id="tipo-cachorro" name="tipo-animal" value="cachorro"
+                            onclick="renderRaca()"> Cachorro
                     </label>
                 </div>
             </div>
@@ -46,9 +60,11 @@
                 <input type="text" name="idade-animal">
             </div>
 
-            <button class="btn-save" type="submit" onclick="postPref()" >Salvar Preferências</button>
+            <button class="btn-save" type="submit" onclick="postPref()">Salvar Preferências</button>
         </form>
     </div>
-    <script src="../src/index.js"></script>
+    <script src="./togglesidebar.js"></script>
+    <script src="../render/index.js"></script>
 </body>
+
 </html>
