--- a/telas/recomendados.html
+++ b/telas/recomendados.html
@@ -5,10 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/recomendadoStyles.css">
+    <link rel="stylesheet" href="../styles/sidebar.css">
     <title>Card</title>
 </head>
 
 <body>
+    <div class="sidebar">
+        <button class="sidebar-toggle">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </button>
+        <ul class="menu">
+            <li><a href="./pref.html">Preferências</a></li>
+            <li><a href="./index.html">Página principal</a></li>
+            <li><a href="./recomendados.html">Recomendados</a></li>
+            <li><a href="./lista.html">Todos os animais</a></li>
+        </ul>
+    </div>
     <div class="container">
         <div class="content">
             <div class="card">
@@ -21,6 +35,7 @@
             </div>
         </div>
     </div>
+    <script src="./togglesidebar.js"></script>
     <script src="../render/recomendados.js"></script>
 </body>
 
