--- a/telas/index.html
+++ b/telas/index.html
@@ -110,7 +110,10 @@
                     <a class="nav-link" href="Cadastro.html"><b>Cadastrar</b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="sobre.html"><b>Sobre</b></a>
+                    <a class="nav-link" href="sobre.html"><b>Sobre</b></a> 
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="login.html"><b>Login</b></a>
                 </li>
             </ul>
         </div>
