--- a/telas/login.html
+++ b/telas/login.html
@@ -107,24 +107,12 @@
                         <input type="password" id="password" name="password" placeholder="Digite sua senha">
                     </div>
                     <div class="form-group">
-                        <input type="submit" value="Login">
+                        <input type="submit" onclick="logar()">
                     </div>
                 </form>
             </div>
         </div>
     </div>
     <script src="../render/login.js"></script>
-    <script>
-        document.getElementById("loginForm").addEventListener("submit", function (event) {
-            event.preventDefault(); // Impede o envio do formulário
-            
-            // Exibe o aviso de login
-            alert("Login realizado com sucesso!");
-
-            // Redireciona para a tela de login
-            window.location.href = "../telas/index.html";
-        });
-    </script>
 </body>
-
 </html>
